--- a/css/index.css
+++ b/css/index.css
@@ -267,3 +267,9 @@ table td.sub9 { color: var(--test9); }
   background-size: auto 100%;
   background-repeat: no-repeat;
 }
+
+/* css line-height test */
+.cssLH {
+  font-size: 16px;
+  font-family: "Times New Roman", Times, serif;
+}
