--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,8 @@ a.blue {
 
 .hidden { display: none; }
 
+.mono { font-family: monospace, monospace; }
+
 code {
   background: #303030 !important;
   border: 1px solid rgba(255, 255, 255, .1);
@@ -101,7 +103,8 @@ input[type='checkbox'] { display: none; }
   cursor: pointer;
 }
 
-.togA, .togD, .togM { display: none; }
+/* audio, domrect, math, chrome */
+.togA, .togD, .togM, .togC { display: none; }
 
 /* Icons */
 .icon {
