--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,21 @@ input[type='checkbox'] { display: none; }
 /* audio, domrect, math, chrome, errors */
 .togA, .togD, .togM, .togC, .togE { display: none; }
 
+/* Buttons */
+.button4 {
+  background-color: #f0f078;
+  border: none;
+  color: black;
+  padding: 5px 13px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  font-weight: bold;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
 /* Icons */
 .icon {
   width: 1em;
