--- a/css/index.css
+++ b/css/index.css
@@ -128,6 +128,17 @@ input[type='checkbox'] { display: none; }
   font-weight: bold;
   cursor: pointer;
 }
+.button9 {
+  background-color: #78f0c8;
+  border: none;
+  color: black;
+  padding: 3px 10px;
+  text-align: center;
+  display: inline-block;
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
+}
 .button10 {
   background-color: #78f0f0;
   border: none;
