--- a/css/index.css
+++ b/css/index.css
@@ -119,7 +119,7 @@ button {
   border-style: solid;
   border-width: 1px;
   border-radius: 5px;
-  padding: 3px 12px;
+  padding: 2px 12px;
   text-align: center;
   display: inline-block;
   font-size: 12px;
@@ -153,6 +153,14 @@ button {
 .btn11 {
   border-color: var(--test11);
   color: var(--test11);
+}
+
+/* Table row run buttons */
+div.btn-left {
+  float: left;
+  position: relative;
+  left: -10px;
+  top: -2px;
 }
 
 /* Icons */
