--- a/css/index.css
+++ b/css/index.css
@@ -329,6 +329,7 @@ table td.intro {
   text-align: left;
   line-height: 1.5em;
   padding-bottom: 10px;
+  font-size: 12px;
 }
 
 table td.center {text-align: center; }
