--- a/css/index.css
+++ b/css/index.css
@@ -115,16 +115,21 @@ input[type='checkbox'] { display: none; }
 
 /* Buttons */
 button {
-  background-color: #2e2e2e;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 5px;
-  padding: 2px 12px;
+  background-color: #1a1a1a;
+  /* border-style: solid; */
+  /* border-width: 1px; */
+  /* border-radius: 5px; */
+  /* padding: 2px 12px; */
+  border-width: 0px;
   text-align: center;
   display: inline-block;
   font-size: 12px;
   font-weight: bold;
   cursor: pointer;
+}
+.btn0 {
+  border-color: #b3b3b3;
+  color: #b3b3b3;
 }
 .btn1 {
   border-color: var(--test1);
@@ -210,15 +215,11 @@ div.btn-left {
 /* Icons */
 .icon {
   background-color: #2e2e2e;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: 10px;
-  padding: 2px 6px;
   text-align: center;
   display: inline-block;
-  font-size: 8px;
-  border-color: #b3b3b3;
-  color: white;
+  font-size: 10px;
+  font-weight: bold;
+  color: #b3b3b3;
   cursor: default;
 }
 
